# Squant

./: .env  .env.example  .env.test  .env.test.ci  .env.test.local.example  .gitguardian.yaml  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  DEVELOPMENT.md  Dockerfile  LICENSE  PROGRESS.md  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/agents/: backend-architect.md  frontend-architect.md  product-manager.md  qa-expert.md  quant-analyst.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  e2e-tests.yml  integration-tests.yml  unit-tests.yml
alembic/: env.py
alembic/versions/: 41a7a4f3b3e6_add_missing_fields_and_constraints.py  538fd3eef394_add_notifications_table.py  796dbf28b37b_add_trade_sync_fields.py  7b07702de1bf_add_circuit_breaker_events_table.py  92f2671068a4_create_initial_tables.py  99cce873d552_add_description_column_to_risk_rules.py  a1b2c3d4e5f6_add_interrupted_run_status.py  b3f1a2c4d5e7_make_risk_triggers_rule_id_nullable.py  e62be619bcc6_add_trade_timestamps_fill_source_and_.py  f7bb3cc13521_add_benchmark_equity_to_equity_curves.py
dev-docs/design/: 01-系统架构设计.md  02-API接口详细设计.md  03-数据库初始化和迁移指南.md  04-开发快速开始指南.md  11-文档重命名总结.md  README.md
dev-docs/requirements/: PRD-QuantTradingSystem.md  README.md  用户故事.md  用户画像.md  需求优先级排序.md  验收标准.md
dev-docs/technical/: README.md  api-contract-backend-changes.md
dev-docs/前端开发文档/: README.md
frontend/: .dockerignore  .env.production  .eslintrc.cjs  .gitignore  .npmrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
nginx/: frontend.conf  nginx.conf
plan/: live-trading-review.md
scripts/: backend.sh  deploy.sh  dev.sh  export-openapi.py  frontend.sh  generate-api-types.sh  init-db.sql  test-env.sh  verify-config.py
src/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  mypy.ini  requirements.txt  test_market_cache.py  test_ratelimit.py
src/frontend/: package-lock.json  package.json  tsconfig.app.json
src/squant/: __init__.py  config.py  main.py
strategies/: STRATEGY_GUIDE.md
strategies/examples/: bb_mean_reversion.py  dual_ma.py  momentum_breakout.py  rsi_mean_reversion.py
tests/: __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  conftest.py  (+5 more)
(+586 files in other folders)
