[project]
name = "squant"
version = "0.1.0"
description = "Personal quantitative trading system for cryptocurrency"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Squant Team" }]

dependencies = [
    # Web Framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",

    # Redis
    "redis>=7.1.0",

    # HTTP Client (for exchange APIs)
    "httpx>=0.28.1",

    # Security
    "cryptography>=46.0.0",
    "python-jose[cryptography]>=3.5.0",

    # Data Processing
    "pandas>=2.2.3",
    "numpy>=2.4.0",

    # Logging
    "structlog>=25.5.0",

    # Strategy Sandbox
    "RestrictedPython>=8.1",

    # WebSocket
    "websockets>=16.0",

    # Multi-exchange support (CCXT Pro)
    "ccxt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squant"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
extend-exclude = ["tests/templates/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["squant"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["RestrictedPython.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ccxt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=squant --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "okx_private: marks tests that require OKX API credentials",
]
